app/assets/stylesheets/components/_button.scss
.btn-gradient {
  color: white;
  padding: 8px 24px;
  border-radius: 4px;
  font-weight: bold;
  background: linear-gradient(#167FFB, #0F60C4);
  transition: background 0.3s ease;
  border: 1px solid #0F60C4;
}

.btn-gradient:hover {
  background: linear-gradient(#147EFF, #0F67DA);
  color: white;
}

.btn-flat {
  color: white;
  padding: 8px 24px;
  border-radius: 4px;
  background: #1EDD88;
  transition: background 0.3s ease;
}

.btn-flat:hover {
  background: #1BCB7F;
  color: white;
}

.btn-blue {
  border: 1px solid;
  background-color: transparent;
  text-transform: uppercase;
  font-size: 14px;
  padding: 10px 20px;
  font-weight: 300;
  color: #4cc9f0;
}
.btn-blue:hover {
  color: white;
  border: 0;
  background-color: #4cc9f0;
  -webkit-box-shadow: 10px 10px 99px 6px rgba(76,201,240,1);
  -moz-box-shadow: 10px 10px 99px 6px rgba(76,201,240,1);
  box-shadow: 10px 10px 99px 6px rgba(76,201,240,1);
}
.btn-blue-no-border {
  background-color: transparent;
  
  font-size: 14px;
  padding: 10px 20px;
  font-weight: 300;
  color: #4cc9f0;
}
.btn-blue-no-border:hover {
  color: white;
  text-decoration: none;
  border: 0;
  background-color: #4cc9f0;
  -webkit-box-shadow: 10px 10px 99px 6px rgba(76,201,240,1);
  -moz-box-shadow: 10px 10px 99px 6px rgba(76,201,240,1);
  box-shadow: 10px 10px 99px 6px rgba(76,201,240,1);
}

.btn-green {
  color: #b9e769;
  border: 1px solid;
  background-color: transparent;
  font-size: 14px;
  padding: 10px 20px;
  font-weight: 300;
}
.btn-green:hover {
  color: white;
  border: 0;
  text-decoration: none;
  background-color: #b9e769;
  -webkit-box-shadow: 10px 10px 99px 6px rgba(185, 231, 105, 1);
  -moz-box-shadow: 10px 10px 99px 6px rgba(185, 231, 105, 1);
  box-shadow: 10px 10px 99px 6px rgba(185, 231, 105, 1);
}

.btn-pink {
  color: #f038ff;
  border: 1px solid;
  background-color: transparent;
  font-size: 14px;
  padding: 10px 20px;
  font-weight: 300;
}
.btn-pink:hover {
  color: white;
  border: 0;
  text-decoration: none;
  background-color: #f038ff;
  -webkit-box-shadow: 10px 10px 99px 6px rgba(240, 56, 255, 1);
  -moz-box-shadow: 10px 10px 99px 6px rgba(240, 56, 255, 1);
  box-shadow: 10px 10px 99px 6px rgba(240, 56, 255, 1);
}

